# senjeyb.github.io

./: generate_html.py  index.html  page1.html  page10.html  page100.html  page101.html  page102.html  page103.html  page104.html  page105.html  page106.html  page107.html  page108.html  page109.html  page11.html  page110.html  page111.html  page112.html  page113.html  page114.html  page115.html  page116.html  page117.html  page118.html  page119.html  page12.html  page120.html  page121.html  page122.html  page123.html  page124.html  page125.html  page126.html  page127.html  page128.html  page129.html  page13.html  page130.html  page131.html  page132.html  (+921 more)
.github/workflows/: deploy.yml  run_backend.yml  update-site.yml
backend/: CMakeLists.txt  database.cpp  main.cpp  players.db
css/: styles.css
database/: players.db
frontend/: app.py  generate_html.py  index.html  page10.html  page13.html  page15.html  page16.html  page17.html  page18.html  page26.html  page27.html  page28.html  page29.html  page3.html  page31.html  page33.html  page34.html  page35.html  page36.html  page39.html  page40.html  page42.html  page44.html  page45.html  page46.html  page48.html  page51.html  page54.html  page55.html  page59.html  page61.html  page62.html  page65.html  page8.html
